@@ -4,6 +4,8 @@
 	lock.
 	* src/view_area.cpp: Start of 3D view implementation. No depth and no
 	navigation yet.
+	* src/heightmap_selector.h, src/heightmap_selector.cpp: Implement
+	height factor spinbox/slider.
 
 2008-04-16  Martin Lambers <marlam@marlam.de>
 
